--- a/cachelab/.vscode/settings.json
+++ b/cachelab/.vscode/settings.json
@@ -7,6 +7,7 @@
     "vector": "c",
     "string_view": "c",
     "initializer_list": "c",
-    "span": "c"
+    "span": "c",
+    "stdio.h": "c"
   }
 }
